--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.openapi.generator' version '7.19.0'
+    id 'com.avast.gradle.docker-compose' version '0.17.21'
 }
 
 group = 'dev.diegourban'
@@ -75,3 +76,5 @@ tasks.named('compileJava') {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+dockerCompose.isRequiredBy(test)
