--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Grant execute permission for Gradle
         run: chmod +x gradlew
 
-      - name: Run tests
-        run: ./gradlew integrationTest
+      - name: Run all checks
+        run: ./gradlew check
         env:
           SPRING_PROFILES_ACTIVE: itest
