--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,6 @@ jobs:
       - name: Build & push Docker image
         run: ./gradlew jib
         env:
-          GHCR_USERNAME: ${{ secrets.GHCR_USERNAME }}
-          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-          GITHUB_SHA: ${{ github.sha }}
+          CR_USERNAME: ${{ secrets.GHCR_USERNAME }}
+          CR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          COMMIT_SHA: ${{ github.sha }}
