--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-test-push:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -35,6 +35,25 @@ jobs:
         run: ./gradlew check
         env:
           SPRING_PROFILES_ACTIVE: itest
+
+  push:
+    if: github.event_name == 'push'
+    needs: build-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '25'
+          cache: gradle
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
       - name: Build & push Docker image
         run: ./gradlew jib
